--- a/index.html
+++ b/index.html
@@ -235,10 +235,12 @@
         </main>
         <menu class="deactive">
             <div class="menuhome">
-                <a href=""> <h1>Home</h1></a>
+                <a href="https://daffarafi.github.io/"> <h1>Home</h1></a>
             </div>
             <div class="menuabout">
-                <a href=""><h1>About</h1></a>
+                <a href="https://daffarafi.github.io/aboutme/"
+                    ><h1>About</h1></a
+                >
             </div>
             <div class="menuservices">
                 <a href=""><h1>Services</h1></a>
