--- a/index.html
+++ b/index.html
@@ -194,14 +194,18 @@
         <main>
             <div class="about">
                 <div class="aboutbg">
-                    <div data-aos="zoom-in" data-aos-once="false">
-                        <img src="square/live/3.png" alt="" class="b1" />
+                    <div data-aos="zoom-in" data-aos-once="false" class="b1">
+                        <img src="square/live/3.png" alt="" />
                     </div>
-                    <div data-aos="zoom-in" data-aos-once="false">
-                        <img src="square/live/5.png" alt="" class="b2" />
+                    <div data-aos="zoom-in" data-aos-once="false" class="b2">
+                        <img src="square/live/5.png" alt="" />
                     </div>
-                    <img src="square/menu/1.png" alt="" class="b3" />
-                    <img src="square/menu/2.png" alt="" class="b4" />
+                    <div class="b3">
+                        <img src="square/menu/1.png" alt="" />
+                    </div>
+                    <div class="b4">
+                        <img src="square/menu/2.png" alt="" />
+                    </div>
                 </div>
                 <div class="container">
                     <div class="text">
@@ -247,15 +251,14 @@
             </div>
             <div class="port">
                 <div class="portbg">
-                    <div data-aos="zoom-in" data-aos-once="false">
-                        <img src="square/live/1.png" alt="" class="b1" />
+                    <div data-aos="zoom-in" data-aos-once="false" class="b1">
+                        <img src="square/live/1.png" alt="" />
                     </div>
-                    <img src="square/menu/1.png" alt="" class="b2" />
-                    <img src="square/menu/2.png" alt="" class="b3" />
-                    <div data-aos="zoom-in" data-aos-once="false">
-                        <img src="square/live/3.png" alt="" class="b4" />
+                    <div class="b2"><img src="square/menu/1.png" alt="" /></div>
+                    <div data-aos="zoom-in" data-aos-once="false" class="b4">
+                        <img src="square/live/1.png" alt="" />
                     </div>
-                    <img src="square/menu/5.png" alt="" class="b5" />
+                    <div class="b5"><img src="square/menu/1.png" alt="" /></div>
                 </div>
                 <div class="container">
                     <div class="text" data-aos="fade-right">
