--- a/index.html
+++ b/index.html
@@ -255,10 +255,9 @@
                         <img src="square/live/1.png" alt="" />
                     </div>
                     <div class="b2"><img src="square/menu/1.png" alt="" /></div>
-                    <div data-aos="zoom-in" data-aos-once="false" class="b4">
-                        <img src="square/live/1.png" alt="" />
+                    <div data-aos="zoom-in" data-aos-once="false" class="b5">
+                        <img src="square/menu/1.png" alt="" />
                     </div>
-                    <div class="b5"><img src="square/menu/1.png" alt="" /></div>
                 </div>
                 <div class="container">
                     <div class="text" data-aos="fade-right">
