add review link

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="bottom">
             <div class="container">
                 <div class="review">
-                    <a href=""
+                    <a href="https://daffarafi.github.io/review/"
                         ><div class="point">
                             <i class="bi bi-caret-right-fill"></i>
                         </div>
@@ -338,7 +338,9 @@
                 <a href=""><h1>Portfolio</h1></a>
             </div>
             <div class="menureview">
-                <a href=""><h1>Review</h1></a>
+                <a href="https://daffarafi.github.io/review/"
+                    ><h1>Review</h1></a
+                >
             </div>
             <div class="menucontact">
                 <a href=""><h1>Contact</h1></a>
