add review link

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     </h1>
                     <div class="link">
                         <a
-                            href=""
+                            href="https://daffarafi.github.io/review/"
                             data-aos="fade-right"
                             data-aos-offset="200"
                             data-aos-delay="300"
