add link portfolio

--- a/index.html
+++ b/index.html
@@ -141,16 +141,18 @@
             <div class="container">
                 <div class="menu">
                     <p>Menu</p>
-                    <a href="">
+                    <a href="https://daffarafi.github.io/">
                         <div class="hamburger">
                             <hr />
                             <hr />
                             <hr /></div
                     ></a>
                 </div>
-                <div class="logo"><a href="">Daffa Rafi</a></div>
+                <div class="logo">
+                    <a href="https://daffarafi.github.io/">Daffa Rafi</a>
+                </div>
                 <div class="port">
-                    <a href=""
+                    <a href="https://daffarafi.github.io/portfolio/"
                         ><div class="point">
                             <i class="bi bi-caret-right-fill"></i>
                         </div>
@@ -181,7 +183,7 @@
                 </div>
 
                 <div class="port">
-                    <a href=""
+                    <a href="https://daffarafi.github.io/portfolio/"
                         ><div class="point">
                             <i class="bi bi-caret-right-fill"></i>
                         </div>
@@ -266,7 +268,9 @@
                             These are some of the projects that I've worked on
                             to completion with some of the technologies
                         </h3>
-                        <a href="">Portfolio</a>
+                        <a href="https://daffarafi.github.io/portfolio/"
+                            >Portfolio</a
+                        >
                     </div>
                     <div class="portfolio" data-aos="fade-left">
                         <div class="image">
@@ -335,7 +339,9 @@
                 <a href=""><h1>Services</h1></a>
             </div>
             <div class="menuportfolio">
-                <a href=""><h1>Portfolio</h1></a>
+                <a href="https://daffarafi.github.io/portfolio/"
+                    ><h1>Portfolio</h1></a
+                >
             </div>
             <div class="menureview">
                 <a href="https://daffarafi.github.io/review/"
