--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     /></a>
                 </div>
                 <div class="secret">
-                    <a href=""
+                    <a href="https://daffarafi.github.io/secret"
                         ><div class="point">
                             <i class="bi bi-star-fill"></i>
                         </div>
@@ -246,7 +246,10 @@
                     <h1 data-aos="fade-up" data-aos-offset="400">
                         WHAT CAN I DO<br />FOR YOU?
                     </h1>
-                    <a href="" data-aos="fade-down" data-aos-offset="200"
+                    <a
+                        href="https://daffarafi.github.io/services"
+                        data-aos="fade-down"
+                        data-aos-offset="200"
                         >Web Design</a
                     >
                 </div>
@@ -319,7 +322,7 @@
                             data-aos="fade-left"
                             data-aos-offset="200"
                             data-aos-delay="300"
-                            href=""
+                            href="https://daffarafi.github.io/contact"
                             >Contact</a
                         >
                     </div>
@@ -336,7 +339,9 @@
                 >
             </div>
             <div class="menuservices">
-                <a href=""><h1>Services</h1></a>
+                <a href="https://daffarafi.github.io/services"
+                    ><h1>Services</h1></a
+                >
             </div>
             <div class="menuportfolio">
                 <a href="https://daffarafi.github.io/portfolio/"
@@ -349,7 +354,9 @@
                 >
             </div>
             <div class="menucontact">
-                <a href=""><h1>Contact</h1></a>
+                <a href="https://daffarafi.github.io/contact"
+                    ><h1>Contact</h1></a
+                >
             </div>
         </menu>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
